Start to incorporate inspectragadget as offline_plotting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,9 @@ dependencies = [
     'wrapt',
     'pyserial',
     'pandas',
-    'tqdm'
+    'tqdm',
+    'scipy',
+    'lmfit'
 ]
 
 [project.readme]
