--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,7 @@
 [build-system]
-requires = [
-    "setuptools >= 68.1.0",
-    "versioningit >= 2.2.1",
-]
-build-backend = 'setuptools.build_meta'
+requires = ["flit_core >=3.2,<4"]
+
+build-backend = 'flit_core.buildapi'
 
 [project]
 name = "qcodesplusplus"
